# Cypher-Vault

./: .gitattributes  .gitignore  CMakeLists.txt  app.rc
src/: ConfigManager.cpp  ConfigManager.h  ExitConfirmationDialog.cpp  ExitConfirmationDialog.h  Globals.cpp  Globals.h  MainContentPage.cpp  MainContentPage.h  MainWindow.cpp  MainWindow.h  OSDetector.h  SettingsPage.cpp  SettingsPage.h  SideBar.cpp  SideBar.h  SvgIcons.h  SvgManager.cpp  SvgManager.h  ThemeManager.cpp  ThemeManager.h  TitleBar.cpp  TitleBar.h  TrayManager.cpp  TrayManager.h  Utils.cpp  Utils.h  main.cpp
